# CuePad

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  electron-builder.yml  package.json  plan.md  playwright.config.ts  playwright.electron.config.ts  tsconfig.json  vite.config.ts  wdio.tauri.conf.ts
.github/: CONTRIBUTING.md  SECURITY.md
design/promo/: AGENTS.md  demo-data.sql  make-demo-db.sh
design/tools/: cutout.swift  icon.swift
docs/: development.md
e2e/: animation-recorder.js  bridge-mock.js  run.ts  tauri-mock.js  visual.e2e.ts
e2e-electron/: dispatch-sidecar.fixture.mjs  launch.e2e.ts  package-smoke.ts  persistence.e2e.ts
e2e-tauri/: accessibility.e2e.ts  launch.sh  run.zsh  tauri.wdio.conf.json  workspace-restart.e2e.ts  workspace.e2e.ts
electron/: db.ts  event.ts  ipc-sql.ts  main.ts  preload.ts  shortcuts.ts  sidecar.test.ts  sidecar.ts  tray.ts
electron/shared/: bridge-types.ts
landing/: AGENTS.md  package.json  tsconfig.json
landing/src/: app.css  app.html
migrations/: 003_card_numbering.sql
native/dispatch/: Cargo.toml  smoke.ts
native/dispatch/src/: main.rs
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_nullable_card_text.sql  004_project_pinning.sql  005_tasks.sql
src-tauri/src/: dispatch.rs  lib.rs  main.rs
src/lib/: latest-wins.ts  (+1 more)
tests/: accelerator.test.ts  autosave.test.ts  backup.test.ts  blocks.test.ts  bun.d.ts  db-repository.test.ts  decorations.test.ts  electron-shell.test.ts  latest-boolean-writer.test.ts  latest-wins.test.ts  reorder.test.ts  search.test.ts  segments.test.ts  shortcut.test.ts  variables.test.ts
(+80 files in other folders)
