[package]
name = "cuepad"
version = "0.1.0"
description = "CuePad"
authors = ["sugeh"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cuepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-wdio-webdriver = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-graphics = { version = "0.25.0", features = ["elcapitan"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace", "block2", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSNotification", "NSOperation", "NSString"] }
