[package]
name = "cuepad-dispatch"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
core-graphics = { version = "0.25.0", features = ["elcapitan"] }
objc2-app-kit = { version = "0.3.2", features = ["NSRunningApplication", "NSWorkspace", "block2", "libc"] }
objc2-foundation = { version = "0.3.2", features = ["NSNotification", "NSPort", "NSRunLoop", "NSString", "block2"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
